# simeon

./: COPYING  README.md  ci.nix  haskell.nix  simeon.cabal  using-simeon.md
docs/: README.adoc  README.md  challenge.md  workshop.md
docs/tutorial-v1.3/: README.md  actus-simeon.md  analysis.md  checklist.md  differences.md  embedded-simeon.md  escrow-ex.md  introducing-simeon.md  meadow-overview.md  simeon-data.md  simeon-semantics.md  simeon-zerepoch.md  using-simeon.md
docs/tutorial-v2.0/: README.md  actus-simeon.md  convert  embedded-simeon.md  escrow-ex.md  introducing-simeon.md  playground-overview.md  simeon-data.md  simeon-semantics.md  simeon-zerepoch.md  using-simeon.md
docs/tutorial-v3.0/: README.adoc  actus-simeon.adoc  embedded-simeon.adoc  escrow-ex.adoc  escrow_step_by_step.adoc  introducing-simeon.adoc  playground-overview.adoc  simeon-data.adoc  simeon-gideon.adoc  simeon-model.adoc  simeon-semantics.adoc  simeon-step-by-step.adoc  using-simeon.adoc
isabelle/: SemanticsTypes.thy  StaticAnalysis.thy
papers/actus2021/: article.bib  article.tex
papers/simeon2019/: paper-long.tex  paper.bib  paper.tex
papers/static_analysis2020/: paper.bib  paper.tex
semantics-1.0/: README.md  simeon.cabal
semantics-1.0/coq/: Contract.v  Inputs.v  Semantics.v  _CoqProject
semantics-1.0/equiv_exp/: ACTUS.hs  simeon.cabal
semantics-1.0/meadow/blocks/: blocks.xml  defs.json
semantics-1.0/meadow/editor/fay-0.24.0.0-patch/src/Fay/Compiler/: Import.hs
semantics-1.0/meadow/editor/fay-0.24.0.0-patch/src/main/: Main.hs
semantics-1.0/meadow/editor/fay-code/: Simeon.hs
semantics-1.0/meadow/editor/fay-code/coupon_bond_guaranteed/: Main.hs
semantics-1.0/meadow/editor/fay-code/escrow_example/: Main.hs
semantics-1.0/meadow/editor/fay-code/zero_coupon_bond_example/: Main.hs
semantics-1.0/meadow/html/: index.html  simeon.js
semantics-1.0/meadow/html/editor/: index.html
semantics-1.0/meadow/meadow-sc/: README.md
semantics-1.0/meadow/meadow-sc/editor-js/: Main.hs
semantics-1.0/meadow/meadow-sc/hs/: MyContract.hs  Simeon.hs
semantics-1.0/meadow/meadow-sc/meadow-sc/: meadow-sc.cabal
semantics-1.0/meadow/meadow-sc/meadow-sc/src/: Lib.hs
semantics-1.0/meadow/meadow-sc/meadow-sc/static/: index.html  simeon.js
semantics-1.0/meadow/meadow-sc/meadow-sc/static/editor/: all.js  index.html  out.js
semantics-1.0/meadow/src/: Main.hs
semantics-1.0/src/: Analysis.hs  CrowdFunding.hs  DepositIncentive.hs  Escrow.hs  EscrowV2.hs  Main.hs  SPJModel.hs
semantics-1.0/tex/: oracles.tex  paper.bib  paper.tex
semantics-2.0/only_types/: BasicContract.hs  Simeon.hs
src/: Main.hs
src/Language/: Simeon.hs
src/Language/Simeon/: ACTUS.hs  Deserialisation.hs  ExtendedBuilder.hs  Pretty.hs  Semantics.hs  SemanticsDeserialisation.hs  SemanticsSerialisation.hs  SemanticsTypes.hs  Serialisation.hs  Util.hs
src/Language/Simeon/ACTUS/: ActusContracts.hs
src/Language/Simeon/Analysis/: FSMap.hs  FSSemanticsFastVerbose.hs  FSSet.hs  IntegerArray.hs  MkSymb.hs  Numbering.hs
src/Language/Simeon/Examples/: Auction.hs  CouponBond.hs  CrowdFunding.hs  DepositIncentive.hs  Escrow.hs  EscrowSimple.hs  EscrowSimpleV2.hs  ExpCrowdFunding.hs  ExpEscrow.hs  ExpRent.hs  Rent.hs  ZCBG.hs  ZCBG2.hs
